Fixed overflow issue

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,6 +8,7 @@
   width: 100vw;
   left: 0;
   top: 0;
+  z-index: 2;
 
   &__logo {
     width: 124px;
